--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,15 +7,26 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+ 	 	<uses-permission android:name="android.permission.INTERNET"/>
+  		<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+  		<!-- External storage for caching. -->
+  		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  		<!-- My Location -->
+  		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  		<!-- Maps API needs OpenGL ES 2.0. -->
+  <uses-feature
+    android:glEsVersion="0x00020000"
+    android:required="true"/>
+  <!-- End of copy. -->
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Ausciencestyles" >
+        
         <activity
             android:name="com.epicness.auscience.MainListActivity"
             android:label="@string/app_name" >
