--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,25 +7,33 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
- 	 	<uses-permission android:name="android.permission.INTERNET"/>
-  		<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-  		<!-- External storage for caching. -->
-  		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  		<!-- My Location -->
-  		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-  		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-  		<!-- Maps API needs OpenGL ES 2.0. -->
-  <uses-feature
-    android:glEsVersion="0x00020000"
-    android:required="true"/>
-  <!-- End of copy. -->
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+<!-- The following two permissions are not required to use Google Maps Android API v2, but are recommended. -->
+
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Ausciencestyles" >
+       
+        <meta-data
+   		 	android:name="com.google.android.gms.version"
+   		 	android:value="@integer/google_play_services_version" />
+        
+        <meta-data
+        	 android:name="com.google.android.maps.v2.API_KEY"
+         	android:value="AIzaSyC315eOCIbsi7UcS6vFLEvm6YnxST3gK3g"/>
         
         <activity
             android:name="com.epicness.auscience.MainListActivity"
